--- a/project.css
+++ b/project.css
@@ -21,7 +21,7 @@
   font-size: 30px;
 }
 
-  /*INTRODUCTION-MY ROLE*/
+/*INTRODUCTION-MY ROLE*/
   .introBoxes{
     text-align: center;
   }
@@ -235,6 +235,17 @@ padding:1%;
   padding-top: 2%;
   padding-bottom: 2%;
 }
+
+/*.statementSub{
+  font-size: 30px;
+  text-align: center;
+  color:rgb(01, 161, 167);
+  background:rgb(246,243,246);
+  margin-top: 3%;
+  margin-bottom: 3%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}*/
 
 .statmentOrange{
   color:rgb(221, 98, 92);
