--- a/emoji-libs-port.css
+++ b/emoji-libs-port.css
@@ -45,7 +45,7 @@ vetting ideas*/
   text-align: center;
 }
 .compShots{
-  width:80%;
+  width:70%;
   margin-bottom: 2%;
 
 }
@@ -58,23 +58,31 @@ vetting ideas*/
 }
 
 .recCircle{
-width:260px;
-height:260px;
+width:300px;
+height:300px;
 border-radius:50%;
 border: solid 3px rgb(0,111,255);
 color: rgb(74, 74, 74);
 display:inline-block;
-margin-left: 2%;
+margin: 2%;
 position:relative;
+}
+
+.circleRecTitle{
+  font-size: 24px;
+  font-weight: bold;
+  position:absolute;
+  width:100%;
+    padding-top:20%;
 }
 
 .circleRecText{
   font-size: 18px;
   position:absolute;
   width:100%;
-  padding-top:15%;
-  padding-left:7%;
-  padding-right:7%;
+  padding-top:35%;
+  padding-left:8%;
+  padding-right:8%;
 }
 
 /*VETTING IDEAS*/
@@ -134,14 +142,32 @@ width:350px;
   margin:0 auto;
 }
 
+.thinkBigP1{
+    font-size: 24px;
+    text-align: left;
+    margin-bottom: 3%;
+}
+
 .thinkBigP{
   text-align: left;
-  margin-bottom: 3%;
 }
+
 
 .bibAndLibImg{
   width:80%;
 }
+
+/*STRATEGY:
+THE PLAN*/
+
+/*.planImgDiv{
+  text-align: center;
+}*/
+.planImg{
+  width:70%;
+  margin: 0 auto;
+}
+
 
 /*.compThreatLogosDiv{
   text-align: center;
