--- a/tier5.css
+++ b/tier5.css
@@ -751,6 +751,9 @@ text-align: center;
 .paperProtoText{
   font-size: 20px;
 }
+
+/*DESIGN:
+USEABILITY TESTING*/
 .usabilityTitle{
   margin-top: 1%;
 }
