adding clouds back

--- a/resume.css
+++ b/resume.css
@@ -1,6 +1,10 @@
-body{
-  background:none;
 
+body{
+  background:url(myimages/home/clouds.jpg) no-repeat center center fixed;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size: cover;
 }
 
 
