--- a/resume.css
+++ b/resume.css
@@ -1,10 +1,5 @@
-
 body{
-  background:url(myimages/home/clouds.jpg) no-repeat center center fixed;
-  -webkit-background-size:cover;
-  -moz-background-size:cover;
-  -o-background-size:cover;
-  background-size: cover;
+  background:white;
 }
 
 
